Issue #19565: Prevent warnings at shutdown about pending overlapped ops.